fix flaky nw test
turns out the dom element in the sidebar was hidden by a parent
dom element.

see: https://cloudup.com/ch2kUJzrmAy

--- a/app/addons/documents/assets/less/sidenav.less
+++ b/app/addons/documents/assets/less/sidenav.less
@@ -24,6 +24,10 @@
     text-decoration: none;
   }
 
+  .nav-list {
+    padding-right: 0px;
+  }
+
   // selected nav item row styles
   .nav-list .active > a {
     text-shadow: none;
@@ -32,6 +36,10 @@
     &:hover {
       color: white;
     }
+  }
+
+  .dropdown {
+    margin-right: 15px;
   }
 
   .dropdown-toggle:hover {
